# src/types/index.ts
@@ -92,7 +92,10 @@ export type OpsInsights = ContractSchema<'OpsInsights'>
 export type ActionStatus = ContractSchema<'ActionStatus'>
 export type ActionOutcome = ContractSchema<'ActionOutcome'>
 export type ActionRun = ContractSchema<'ActionRun'>
+export type ActionReasonRequest = ContractSchema<'ActionReasonRequest'>
 export type ActionExecuteRequest = ContractSchema<'ActionExecuteRequest'>
+export type ServiceScaleRequest = ContractSchema<'ServiceScaleRequest'>
+export type ServiceUpdateRequest = ContractSchema<'ServiceUpdateRequest'>
 export type ApprovalStatus = ContractSchema<'ApprovalStatus'>
 export type ApprovalRequest = ContractSchema<'ApprovalRequest'>
 export type AssistantCitation = ContractSchema<'AssistantCitation'>
